# Sample-Python-Package

./: .pypirc  LICENSE.txt  README.md  setup.cfg  setup.py
src/multiply/: multiply_by_three.py
src/sample_pkg.egg-info/: PKG-INFO  SOURCES.txt
src/trial_repo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_divide.py
