[metadata]
name = sample_pkg
version = 0.0.1
author = MyFaduGame
author_email = navinsharma9376319931@gmail.com
description = This is an sample Package to build it only contains the sample multiply 3 structure
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src